--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Sacramento&display=swap" rel="stylesheet">
+    <link rel="icon" href="%PUBLIC_URL%/fav/favicon.ico" />
     <title>L2日本DB</title>
     <!-- Link your CSS file here -->
     <link rel="stylesheet" href="styles.css">
